# AlphaClaude

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  requirements.txt  run_training.py  setup.py
cpp_src/: bindings.cpp  bitboard.cpp  bitboard.h  game.cpp  game.h  magic.cpp  magic.h  mcts.cpp  mcts.h  movegen.cpp  movegen.h  perft.cpp  position.cpp  position.h  types.h
py_src/: arena.py  config.py  model.py  self_play.py  train.py  utils.py
tests/: test_encoding.py  test_mcts.py  test_model.py  test_position.py
